--- a/Views/Shared/Components/_LayoutNavbarComponentPartial/Default.cshtml
+++ b/Views/Shared/Components/_LayoutNavbarComponentPartial/Default.cshtml
@@ -13,7 +13,7 @@
 
 			<form class="navbar-left navbar-form nav-search mr-md-3" action="">
 				<div class="input-group">
-					<input type="text" placeholder="Search ..." class="form-control">
+					<input type="text" placeholder="Aranacak Kelime Giriniz ..." class="form-control">
 					<div class="input-group-append">
 						<span class="input-group-text">
 							<i class="la la-search search-icon"></i>
@@ -27,10 +27,10 @@
 						<i class="la la-envelope"></i>
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">Action</a>
-						<a class="dropdown-item" href="#">Another action</a>
+						<a class="dropdown-item" href="#">Gelen Mesajlar</a>
+						<a class="dropdown-item" href="#">Yeni Mesaj</a>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Something else here</a>
+						<a class="dropdown-item" href="#">İletişim Paneli</a>
 					</div>
 				</li>
 				<li class="nav-item dropdown hidden-caret">
@@ -40,7 +40,7 @@
 					</a>
 					<ul class="dropdown-menu notif-box" aria-labelledby="navbarDropdown">
 						<li>
-							<div class="dropdown-title">You have 4 new notification</div>
+							<div class="dropdown-title">4 Yeni Bildiriminiz Var</div>
 						</li>
 						<li>
 							<div class="notif-center">
@@ -64,7 +64,7 @@
 								</a>
 								<a href="#">
 									<div class="notif-img">
-										<img src="assets/img/profile2.jpg" alt="Img Profile">
+										<img src="~/Ready-Bootstrap-Dashboard-master/assets/img/profile2.jpg" alt="Img Profile">
 									</div>
 									<div class="notif-content">
 										<span class="block">
@@ -90,25 +90,25 @@
 					</ul>
 				</li>
 				<li class="nav-item dropdown">
-					<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img src="assets/img/profile.jpg" alt="user-img" width="36" class="img-circle"><span>Hizrian</span></span> </a>
+					<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img src="~/Ready-Bootstrap-Dashboard-master/assets/img/profile.jpg" alt="user-img" width="36" class="img-circle"><span>Hizrian</span></span> </a>
 					<ul class="dropdown-menu dropdown-user">
 						<li>
 							<div class="user-box">
 								<div class="u-img"><img src="assets/img/profile.jpg" alt="user"></div>
 								<div class="u-text">
-									<h4>Hizrian</h4>
-									<p class="text-muted">hello@themekita.com</p><a href="profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a>
+									<h4>Admin</h4>
+									<p class="text-muted">hello@themekita.com</p><a href="profile.html" class="btn btn-rounded btn-danger btn-sm">Profili Gör</a>
 								</div>
 							</div>
 						</li>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#"><i class="ti-user"></i> My Profile</a>
-						<a class="dropdown-item" href="#"></i> My Balance</a>
-						<a class="dropdown-item" href="#"><i class="ti-email"></i> Inbox</a>
+						<a class="dropdown-item" href="#"><i class="ti-user"></i> Profilim</a>
+						<a class="dropdown-item" href="#"></i> Siteye Git</a>
+						<a class="dropdown-item" href="#"><i class="ti-email"></i> Gelen Mesajlar</a>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#"><i class="ti-settings"></i> Account Setting</a>
+						<a class="dropdown-item" href="#"><i class="ti-settings"></i> Şifre Değiştir</a>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> Logout</a>
+						<a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> Çıkış Yap</a>
 					</ul>
 					<!-- /.dropdown-user -->
 				</li>
